objects/OrgWide_Email_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>Diesel_Vollmacht_OrgWide_Sender_Email__c</fullName>
        <inlineHelpText>The Organization Wide Email Address to be used as sender of a Diesel Vollmacht. Note that the Address needs to first be created and activated in Setup -&gt; Email -&gt; Organization-Wide Addresses. If empty, the running user's email address is used.</inlineHelpText>
        <label>Diesel Vollmacht OrgWide Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LV_Vollmacht_OrgWide_Sender_Email__c</fullName>
        <inlineHelpText>The Organization Wide Email Address to be used as sender of a LV Vollmacht. Note that the Address needs to first be created and activated in Setup -&gt; Email -&gt; Organization-Wide Addresses. If empty, the running user's email address is used.</inlineHelpText>
        <label>LV Vollmacht OrgWide Sender Email</label>
        <type>Email</type>
    </fields>
    <label>OrgWide Email Settings</label>
    <pluralLabel>OrgWide Email Settings</pluralLabel>
</CustomObject>